// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site admin user table invite name column test Test admin invitation 1`] = `
<div
  className="cell"
>
  <div>
    <div>
      adminUser1
    </div>
    <div>
      Administrator
    </div>
  </div>
</div>
`;

exports[`Site admin user table invite name column test Test learner invitation 1`] = `
<div
  className="cell"
>
  <div>
    <div>
      learnerUser1
    </div>
    <div>
      Learner
    </div>
  </div>
</div>
`;
